Fixed spacing issues with the today and week view

--- a/src/components/ScheduleToday/ScheduleToday.css
+++ b/src/components/ScheduleToday/ScheduleToday.css
@@ -4,7 +4,7 @@
 }
 
 .ScheduleToday--container{
-  margin-top: 40px;
+  margin-top: 50px;
   flex-basis: 100%;
 }
 
@@ -119,12 +119,10 @@
 
 @media screen and (max-width: 800px) {
   .ScheduleToday--title, .ScheduleToday--container{
-    max-width: 90%;
-    display: block;
-    margin: 0 auto;
+    margin-left: 20px;
   }
 
   .ScheduleToday--container{
-    margin: 40px auto;
+    margin: 50px auto;
   }
 }
